--- a/twig/details_malgruppe.twig.html
+++ b/twig/details_malgruppe.twig.html
@@ -71,6 +71,7 @@
 
 	{% if stat_type == 'land' %}
 		<h2>Alle fylker</h2>
+<strong>Oslo er ikke med i oversikten, da SSB ikke oppgir befolkningstall per bydel.</strong>
 		
 		<div class="container col-xs-12">
 			<div class="well">
