--- a/twig/deltakere.twig.html
+++ b/twig/deltakere.twig.html
@@ -9,6 +9,8 @@
       ['{{ar}}',{{data.personer*1}},{{data.innslag*1}}]{{loop.last?'':','}}
       {% endfor %}
     ]);
+    
+	data.sort([{column: 1, desc:true}, {column: 0}]);
 
     var options = {
       title: 'Utvikling i deltakelse',
