--- a/twig/details_sjangerfordeling.twig.html
+++ b/twig/details_sjangerfordeling.twig.html
@@ -10,113 +10,40 @@
 	<div class="container col-xs-12">
 		<h3>Personer</h3>
 		<div class="well">
+			<h4>Antall personer per sjanger</h4>
 			<table class="table table-striped" style="max-width: 400px">
-				<thead>
-					<tr>
-						<th></th>
-						<th>TOTAL</th>
-						{# <th colspan="5" style="text-align:center;">Scene</th> #}
-						<th>Musikk</th>
-						<th>Dans</th>
-						<th>Teater</th>
-						<th>Litteratur</th>
-						<th>Annet scene</th>
-						
-						<th>Film</th>
-						<th>Utstilling</th>
-						<th>Konfer.</th>
-						<th>Nettred.</th>
-						<th>Arrangør</th>
-						<th>Scenetek.</th>
-						<th>Matkultur</th>
-						<th>Diverse</th>
-					</tr>
-					{#<tr>
-						<th></th>
-						<th></th>
-						<th>Musikk</th>
-						<th>Dans</th>
-						<th>Teater</th>
-						<th>Litteratur</th>
-						<th>Annet</th>
-						<th>Total</th>
-					</tr> #}
-				</thead>
+				{% embed "details_sjangerfordeling_tableheader.twig.html" %}{% endembed %}
 				{% for ar, data in kommune.sjangerfordeling %}
-					<tr>
-						<td align="right">{{ar}}</td>
-						<th style="text-align:right;" align="right">{{data.total}}</th>
-						<td align="right">{{data.Musikk}}</td>
-						<td align="right">{{data.Dans}}</td>
-						<td align="right">{{data.Teater}}</td>
-						<td align="right">{{data.Litteratur}}</td>
-						<td align="right">{{data.Annet_scene}}</td>
-						{# <th style="text-align:right;" align="right">{{data.total_scene}}</th> #}
-						<td align="right">{{data.Film}}</td>
-						<td align="right">{{data.Utstilling}}</td>
-						<td align="right">{{data.Konferansier}}</td>
-						<td align="right">{{data.Nettredaksjon}}</td>
-						<td align="right">{{data.Arrangor}}</td>
-						<td align="right">{{data.Sceneteknikk}}</td>
-						<td align="right">{{data.Matkultur}}</td>
-						<td align="right">{{data.Diverse}}</td>
-					</tr>			
+					{% embed "details_sjangerfordeling_tablerow.twig.html" %}{% endembed %}
+				{% endfor %}
+			</table>
+			<h4>Prosentvis fordeling per sjanger</h4>
+			<table class="table table-striped" style="max-width: 400px">
+				{% embed "details_sjangerfordeling_tableheader.twig.html" %}{% endembed %}
+				{% for ar, data in kommune.sjangerfordeling %}
+					{% set onepercent = 100/data.total %}
+					{% embed "details_sjangerfordeling_tablerowPercent.twig.html" %}{% endembed %}
+				{% endfor %}
+
+			</table>
+		</div>
+
+		<h3>Innslag</h3>
+		<div class="well">
+			<h4>Antall personer per sjanger</h4>
+			<table class="table table-striped" style="max-width: 400px">
+				{% embed "details_sjangerfordeling_tableheader.twig.html" %}{% endembed %}
+				{% for ar, data in kommune.sjangerfordeling_innslag %}
+					{% embed "details_sjangerfordeling_tablerow.twig.html" %}{% endembed %}
 				{% endfor %}
 			</table>
 
-
-			<h3>Innslag</h3>
+			<h4>Prosentvis fordeling per sjanger</h4>
 			<table class="table table-striped" style="max-width: 400px">
-				<thead>
-					<tr>
-						<th></th>
-						<th>TOTAL</th>
-						{# <th colspan="5" style="text-align:center;">Scene</th> #}
-						<th>Musikk</th>
-						<th>Dans</th>
-						<th>Teater</th>
-						<th>Litteratur</th>
-						<th>Annet scene</th>
-						
-						<th>Film</th>
-						<th>Utstilling</th>
-						<th>Konfer.</th>
-						<th>Nettred.</th>
-						<th>Arrangør</th>
-						<th>Scenetek.</th>
-						<th>Matkultur</th>
-						<th>Diverse</th>
-					</tr>
-					{#<tr>
-						<th></th>
-						<th></th>
-						<th>Musikk</th>
-						<th>Dans</th>
-						<th>Teater</th>
-						<th>Litteratur</th>
-						<th>Annet</th>
-						<th>Total</th>
-					</tr> #}
-				</thead>
+				{% embed "details_sjangerfordeling_tableheader.twig.html" %}{% endembed %}
 				{% for ar, data in kommune.sjangerfordeling_innslag %}
-					<tr>
-						<td align="right">{{ar}}</td>
-						<th style="text-align:right;" align="right">{{data.total}}</th>
-						<td align="right">{{data.Musikk}}</td>
-						<td align="right">{{data.Dans}}</td>
-						<td align="right">{{data.Teater}}</td>
-						<td align="right">{{data.Litteratur}}</td>
-						<td align="right">{{data.Annet_scene}}</td>
-						{# <th style="text-align:right;" align="right">{{data.total_scene}}</th> #}
-						<td align="right">{{data.Film}}</td>
-						<td align="right">{{data.Utstilling}}</td>
-						<td align="right">{{data.Konferansier}}</td>
-						<td align="right">{{data.Nettredaksjon}}</td>
-						<td align="right">{{data.Arrangor}}</td>
-						<td align="right">{{data.Sceneteknikk}}</td>
-						<td align="right">{{data.Matkultur}}</td>
-						<td align="right">{{data.Diverse}}</td>
-					</tr>			
+					{% set onepercent = 100/data.total %}
+					{% embed "details_sjangerfordeling_tablerowPercent.twig.html" %}{% endembed %}
 				{% endfor %}
 			</table>
 	
