--- a/twig/details_sjangerfordeling.twig.html
+++ b/twig/details_sjangerfordeling.twig.html
@@ -30,7 +30,7 @@
 
 		<h3>Innslag</h3>
 		<div class="well">
-			<h4>Antall personer per sjanger</h4>
+			<h4>Antall innslag per sjanger</h4>
 			<table class="table table-striped" style="max-width: 400px">
 				{% embed "details_sjangerfordeling_tableheader.twig.html" %}{% endembed %}
 				{% for ar, data in kommune.sjangerfordeling_innslag %}
