--- a/twig/deltakere.twig.html
+++ b/twig/deltakere.twig.html
@@ -18,6 +18,12 @@
 
     var chart = new google.visualization.LineChart(document.getElementById('statistikk_deltakere_{{kommune.metadata.id}}'));
     chart.draw(data, options);
+
+    var id = "#deltakere_dlbtn_{{ kommune.metadata.id }}";
+    
+    //console.log('ID: '+id);
+    jQuery(id).attr('href', chart.getImageURI());
+    jQuery(id).attr('download', options.title+'.png');
   }
 </script>
 
