--- a/twig/details_malgruppe.twig.html
+++ b/twig/details_malgruppe.twig.html
@@ -37,6 +37,9 @@
 	<div class="container col-xs-12">
 		<div class="well">
 			{% embed "malgruppe.twig.html" %}{% endembed %}	
+			<div class="row pull-right">
+				<a id="malgruppe_dlbtn_{{ kommune.metadata.id }}" class="btn btn-sm btn-default" href="">Last ned graf</a>
+			</div>
 		</div>
 	</div>
 	
