--- a/twig/kjonnsfordeling.twig.html
+++ b/twig/kjonnsfordeling.twig.html
@@ -16,6 +16,11 @@
 
     var chart = new google.visualization.PieChart(document.getElementById('statistikk_kjonnsfordeling_{{kommune.metadata.id}}'));
     chart.draw(data, options);
+
+    var id = "#kjonnsfordeling_dlbtn_{{ kommune.metadata.id }}";
+    //console.log('ID: '+id);
+    jQuery(id).attr('href', chart.getImageURI());
+    jQuery(id).attr('download', options.title+'.png');
   }
 </script>
 
