--- a/twig/details_aldersfordeling.twig.html
+++ b/twig/details_aldersfordeling.twig.html
@@ -77,6 +77,9 @@
 	<div class="container col-xs-12">
 		<div class="well">
 			{% embed "aldersfordeling.twig.html" %}{% endembed %}	
+			<div class="row pull-right">
+				<a id="alder_dlbtn_{{ kommune.metadata.id }}" class="btn btn-sm btn-default" href="">Last ned graf</a>
+			</div>
 		</div>
 	</div>
 {% endfor %}
