--- a/twig/details_deltakere.twig.html
+++ b/twig/details_deltakere.twig.html
@@ -22,7 +22,7 @@
 						<th>{{ar}}</th>
 						<td align="right">{{data.personer}}</td>
 						<td align="right">{{data.innslag*1}}</td>
-						<td align="right">{{data.ppi*1}}</td>
+						<td align="right">{{data.ppi}}</td>
 					</tr>
 			      {% endfor %}
 			</table>
