--- a/twig/details_sjangerfordeling_tablerow.twig.html
+++ b/twig/details_sjangerfordeling_tablerow.twig.html
@@ -1,18 +1,18 @@
 					<tr>
 						<td align="right">{{ar}}</td>
 						<th style="text-align:right;" align="right">{{data.total}}</th>
-						<td align="right">{{data.Musikk}}</td>
-						<td align="right">{{data.Dans}}</td>
-						<td align="right">{{data.Teater}}</td>
-						<td align="right">{{data.Litteratur}}</td>
-						<td align="right">{{data.Annet_scene}}</td>
-						{# <th style="text-align:right;" align="right">{{data.total_scene}}</th> #}
-						<td align="right">{{data.Film}}</td>
-						<td align="right">{{data.Utstilling}}</td>
-						<td align="right">{{data.Konferansier}}</td>
-						<td align="right">{{data.Nettredaksjon}}</td>
-						<td align="right">{{data.Arrangor}}</td>
-						<td align="right">{{data.Sceneteknikk}}</td>
-						<td align="right">{{data.Matkultur}}</td>
-						<td align="right">{{data.Diverse}}</td>
+						<td align="right">{{data.Musikk*1}}</td>
+						<td align="right">{{data.Dans*1}}</td>
+						<td align="right">{{data.Teater*1}}</td>
+						<td align="right">{{data.Litteratur*1}}</td>
+						<td align="right">{{data.Annet_scene*1}}</td>
+						{# <th style="text-align:right;" align="right">{{data.total_scene*1}}</th> #}
+						<td align="right">{{data.Film*1}}</td>
+						<td align="right">{{data.Utstilling*1}}</td>
+						<td align="right">{{data.Konferansier*1}}</td>
+						<td align="right">{{data.Nettredaksjon*1}}</td>
+						<td align="right">{{data.Arrangor*1}}</td>
+						<td align="right">{{data.Sceneteknikk*1}}</td>
+						<td align="right">{{data.Matkultur*1}}</td>
+						<td align="right">{{data.Diverse*1}}</td>
 					</tr>			
